--- a/dependencies/android/build.gradle
+++ b/dependencies/android/build.gradle
@@ -12,8 +12,11 @@ buildscript {
 apply plugin: 'com.android.library'
 
 android {
-	compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
-	buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
+	defaultConfig {
+		minSdkVersion Integer.parseInt(project.ANDROID_BUILD_MIN_SDK_VERSION)
+		compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_TARGET_SDK_VERSION)
+		buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
+	}
 }
 
 dependencies {
